# DeDuplicationDict

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-all.txt  requirements-test.txt
.github/workflows/: unittest.yaml
autocachedict/: __init__.py
deduplicationdict/: __init__.py
docs/: conf.py  index.md
docs/_static/: deduplicationdict-logo-square-black.ai  deduplicationdict-logo-square-white.ai  deduplicationdict-logo-wide-black.ai  deduplicationdict-logo-wide-white.ai
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-flake8.txt  requirements-test.txt
tests/: test_main.py
unit_test/: test_main.py
